--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-vue": "^3.1.0",
     "husky": "^9.0.11",
     "tailwindcss": "^3.4.3",
     "vite": "^3.1.0"
   },
-    "husky": {
-      "hooks": {
-        "pre-commit": "tailwindcss -i ./src/tailwind_src/input.css -o ./src/style.css && git add ."
-      }
+  "husky": {
+    "hooks": {
+      "pre-commit": "tailwindcss -i ./src/tailwind_src/input.css -o ./src/style.css && git add ."
     }
+  }
 }
