--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "tailwind:init": "tailwindcss init && mkdir ./src/tailwind_src && touch ./src/tailwind_src/input.css",
-    "tailwind:watch": "tailwindcss -i ./src/tailwind_src/input.css -o ./src/style.css --watch"
+    "tailwind:watch": "tailwindcss -i ./src/tailwind_src/input.css -o ./src/style.css --watch",
+    "prepare": "husky install"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -20,7 +21,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-vue": "^3.1.0",
-    "husky": "^9.0.11",
+    "husky": "^8.0.0",
     "tailwindcss": "^3.4.3",
     "vite": "^3.1.0"
   },
