--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview",
     "tailwind:init": "tailwindcss init && mkdir ./src/tailwind_src && touch ./src/tailwind_src/input.css",
     "tailwind:watch": "tailwindcss -i ./src/tailwind_src/input.css -o ./src/style.css --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "deploy": "netlify deploy --prod",
+    "serve": "netlify dev"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "firebase": "^9.9.4",
     "vue": "^3.2.37",
@@ -21,6 +24,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-vue": "^3.1.0",
+    "handlebars": "^4.7.8",
     "husky": "^8.0.0",
     "tailwindcss": "^3.4.3",
     "vite": "^3.1.0"
